--- a/codebase/static/css/slick-theme.css
+++ b/codebase/static/css/slick-theme.css
@@ -128,7 +128,7 @@
 
     width: 100%;
     padding: 0;
-    margin: 0;
+    margin: -20px 0;
 
     list-style: none;
 
